# mcp-census

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agent.py  app.py  databases.py  gradio_app.py  pyproject.toml  rag_index.faiss  rag_metadata.pkl  requirements.txt  server.py  utils.py
.github/workflows/: check_file_size.yaml  sync_to_hf_hub.yaml
.gradio/flagged/: dataset1.csv
data/: state_abbr_to_name.json  state_name_to_abbr.json
functions/: census_api_calls.py  census_utils.py
functions/vector_databases/census_dhc_dp_techdoc/: census_dhc_dp_techdoc.py
mcp_server/: app.py
mcp_server/mcp_functions/: census_api_calls.py  census_api_docs.py  census_utils.py  utils.py
mcp_server/vector_databases/census_dhc_dp_techdoc/: census_dhc_dp_techdoc.py
src/mcp_census/: __init__.py  __main__.py  server.py
src/mcp_census/functions/: census_api.py  census_api_calls.py  census_api_docs.py  census_utils.py
src/mcp_census/functions/vector_databases/census_dhc_dp_techdoc/: census_dhc_dp_techdoc.py
src/mcp_census/vector_dbs/: datasets_db.py  quick_search.py
