[project]
name = "mcp-census"
version = "0.1.0"
description = "MCP wrapper around Census Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.2.0",
    "markdownify>=1.1.0",
    "mcp[cli]>=1.9.3",
    "pypdf>=5.6.0",
    "sentence-transformers>=4.1.0",
]

[project.scripts]
mcp-census = "mcp_census:server"

[dependency-groups]
agent = [
    "smolagents[mcp,openai,telemetry]>=1.17.0",
]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
gradio-deployment = [
    "gradio[mcp]>=5.33.0",
]
